[package]
name = "reauthfi"
version = "0.1.4"
edition = "2021"
authors = ["kazu728"]
description = "macOS Captive Portal auto-detection and opener CLI tool"
license = "MIT"
repository = "https://github.com/kazu728/reauthfi"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
colored = "2"
