[package]
name = "reauthfi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reauthfi"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
reauthfi-core = { path = "../core" }
