[package]
name = "reauthfi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
reqwest.workspace = true
regex.workspace = true
colored.workspace = true
