[package]
name = "reauthfi-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
clap.workspace = true
napi.workspace = true
napi-derive.workspace = true
reauthfi-core = { path = "../../core", version = "0.1.2" }

[build-dependencies]
napi-build.workspace = true
